# bany

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml  pre-commit-autoupdate.yml  pre-commit.yml
bany/: __main__.py
bany/cmd/: base.py
bany/cmd/extract/: app.py  controller.py  rules.py
bany/cmd/extract/extractors/: __init__.py  base.py  pdf.py
bany/cmd/solve/: app.py  controller.py
bany/cmd/solve/network/: algo.py  attrs.py  loader.py  validate.py  visualize.py
bany/cmd/solve/solvers/: __init__.py  basesolver.py  bucketdata.py  constrained.py  graphsolver.py  montecarlo.py  unconstrained.py
bany/cmd/split/: app.py  controller.py  splitter.py
bany/cmd/ynab/: app.py
bany/core/: cache.py  config.py  logger.py  money.py  settings.py
bany/ynab/: api.py  mock.py  transaction.py
cfgs/: .gitignore  allocate.yaml  costco-split.txt  extract-pdf-lifeatford.yml  extract-pdf-paylocity.yml
tests/bany/cmd/: cookbook.py
tests/bany/cmd/solve/network/: test_algo.py  test_attrs.py  test_loader.py  test_validate.py  test_visualize.py
tests/bany/cmd/solve/solvers/: test_basesolver.py  test_bucketdata.py  test_constrained.py  test_graphsolver.py  test_montecarlo.py  test_unconstrained.py
tests/bany/cmd/split/: test_splitter.py
tests/bany/core/: test_money.py
tests/bany/ynab/: test_api.py
