[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120
lines_after_imports = 2

[tool.poetry]
name = "bany"
version = "0.0.0"
description = ""
authors = ["Adam Gagorik <adam.gagorik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pdfplumber = "^0.7.6"
python-dateutil = "^2.8.2"
oauthlib = "^3.2.2"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
requests = "^2.28.2"
rich = "^13.2.0"
diskcache = "^5.4.0"
responses = "^0.22.0"
pandas = "^1.5.3"
py-moneyed = "^3.0"
PyYAML = "^6.0"
networkx = "^3.0"
scipy = "^1.10.0"
cmd2 = "^2.4.2"
textualize = "^0.1"
poetry = "^1.3.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
bany = 'bany.__main__:main'

[tool.poetry-dynamic-versioning]
enable = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
