[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "deptry>=0.23.0",
  "pre-commit>=4.2.0",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1"
]

[project]
authors = [
  {"name" = "Adam Gagorik", "email" = "adam.gagorik@gmail.com"}
]
dependencies = [
  "cmd2>=2.5.11",
  "diskcache>=5.6.3",
  "networkx>=3.4.2",
  "numpy>=2.2.4",
  "oauthlib>=3.2.2",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pdfplumber>=0.11.6",
  "py-moneyed>=3.0",
  "pydantic>=2.11.3",
  "pydantic-settings>=2.8.1",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.1.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "responses>=0.25.7",
  "rich>=14.0.0",
  "scipy>=1.15.2",
  "textualize>=0.1",
  "typer>=0.15.2"
]
description = "A collection of scripts for personal finance"
license = {file = "LICENSE"}
name = "bany"
readme = "README.md"
requires-python = ">=3.13.0"
version = "2.0.0"

[project.scripts]
bany = 'bany.__main__:app'

[project.urls]
Repository = "https://github.com/AdamGagorik/bany"

[tool.pytest.ini_options]
log_cli = true
log_cli_format = "%(levelname)-7s %(message)s"
log_cli_level = "DEBUG"
testpaths = ["tests"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py39"

[tool.ruff.format]
preview = true

[tool.ruff.lint]
ignore = [
  # LineTooLong
  "E501",
  # DoNotAssignLambda
  "E731",
  # Avoid specifying long messages outside the exception class
  "TRY003",
  # Check for execution of untrusted input
  "S603",
  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
  "S311"
]
select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY"
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
